[project]
name = "keyfleur"
version = "0.1.0"
description = "Generate poetic API keys with haiku, mythic and crystalline elegance."
readme = "README.md"
authors = [{ name="Your Name", email="you@example.com" }]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = []

[project.scripts]
keyfleur = "keyfleur.cli:main"
